2006-04-18  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaDriverInit):
	* exa/exa_migration.c: (exaPixmapIsDirty), (exaPixmapShouldBeInFB),
	(exaDoMigration):
	* exa/exa_priv.h:
	* hw/kdrive/ephyr/ephyr_draw.c: (exaDDXDriverInit):
	* hw/xfree86/exa/examodule.c: (exaDDXDriverInit):
	Add a new migration scheme, called "Smart" for lack of a better name.
	This one behaves somewhat between Greedy and Always.  It moves in if we
	can accelerate, unless the destination is clean and shouldn't be kept in
	framebuffer according to the score, in which case we migrate out (and
	force-migrate anything where migration is free).  This should help fix
	lack of acceleration for drivers without UTS since removing
	exaAsyncPixmapGCOps, and has removed one performance trap with Radeon
	I'd noticed.  It is the new default.

2006-04-18  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_unaccel.c: (ExaCheckPolyGlyphBlt),
	(exaGetPixmapFirstPixel):
	Fix exaGetPixmapFirstPixel to migrate as unaccelerated.  Also adds a bit
	of fallback debugging info to PolyGlyphBlt.

2006-04-18  Donnie Berkholz  <spyderous@gentoo.org>

	reviewed by: Alan Coopersmith

	* hw/xfree86/utils/xorgcfg/interface.c:
	* hw/xfree86/utils/xorgcfg/keyboard-cfg.c:
	* hw/xfree86/utils/xorgcfg/keyboard-cfg.h:
	* hw/xfree86/utils/xorgcfg/loader.c:
	* hw/xfree86/utils/xorgcfg/text-mode.c:
	* hw/xfree86/utils/xorgconfig/cards.c:
	* hw/xfree86/utils/xorgconfig/xorgconfig.c:
	Update all prefixes in config tools, so they mostly work again. Also, make
	RgbPath commented out when using xorgconfig. Start using /dev/input/mice as
	the default mouse location on Linux.

2006-04-17  Donnie Berkholz  <spyderous@gentoo.org>

	* exa/Makefile.am:
	* randr/Makefile.am:
	Wrap a couple more SDK headers in if XORG, as per Dave Airlie's commit on
	2006-01-18.

2006-04-17  Donnie Berkholz  <spyderous@gentoo.org>

	* hw/kdrive/ephyr/Makefile.am:
	Fix kdrive build by linking in libexa before KDRIVE_LIBS.
